--- a/src/app/Module/login/login.component.html
+++ b/src/app/Module/login/login.component.html
@@ -1,6 +1,6 @@
 <!-- login.component.html -->
 
-<div class="container container-fluid shadow-sm" [class.sign-up-mode]="!isSignIn">
+<div class="container container-fluid shadow-lg border-black" [class.sign-up-mode]="!isSignIn">
   <div class="forms-container">
     <div class="signin-signup">
       <!-- debut connexion -->
