--- a/src/app/Utilisateur/details-restaurant/details-restaurant.component.html
+++ b/src/app/Utilisateur/details-restaurant/details-restaurant.component.html
@@ -1,11 +1,24 @@
 <app-header></app-header>
-<!-- section de resto avec ces cartes -->
-
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner carouselBaniere">
+    <div class="carousel-item h-100 active">
+      <img src="../../../assets/banierdetails.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil" />
+    </div>
+    <div class="carousel-item h-100">
+      <img src="../../../assets/banierdetails.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil" />
+    </div>
+    <div class="carousel-item h-100">
+      <img src="../../../assets/banierdetails.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil" />
+    </div>
+  </div>
+</div>
 
 <section class="my-5 border mt-5">
-<div class="w-100 mx-auto  my-4" *ngFor="let restaurateur of restaurateurs">
+<div class="w-100 mx-auto  my-4">
     <div class="d-flex justify-content-between my-4 gap-4">
-        <h4 class="titreDash fw-bold">{{restaurateur.name}} </h4>
+     <div>
+        <h4 class="titreDash fw-bold">Titre Restaurant </h4>
+     </div>
         <div>
             <div class="d-flex justify-content-around gap-3 me-5">
                 <div>
@@ -91,3 +104,35 @@
     </nav>
     </div> -->
 <!-- pagination  -->
+
+<!-- <div class="card w-75"style="margin-top:8%;border:2px solid red;margin-left:15%;border:1px solid #F7E801;">
+  <div class="card-body">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Image</th>
+          <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Nom du plat</th>
+          <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Prix Unitaire  </th>
+          <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Quantite</th>
+          <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Prix Total</th>
+          <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Supprimer</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of panier">
+          <th scope="row"><img src="http://127.0.0.1:8000/images/{{item.image}}" alt="Image du plat" width="50px" height="50px"></th>
+          <td>{{ item.libelle }}</td>
+          <td>{{ item.prix }}</td>
+          <td>
+            <button (click)="diminuerQuantite(item)"> <i class="bi bi-dash"></i> </button>
+            {{ item.quantite }}
+            <button (click)="augmenterQuantite(item)"> <i class="bi bi-plus"></i> </button>
+          </td>
+          <td>{{ item.prix * item.quantite }}</td>
+          <td><button (click)="supprimerDuPanier(item)"> <i class="bi bi-x"></i> </button></td>
+        </tr>
+      </tbody>
+      
+    </table>
+  </div>
+</div> -->
