--- a/src/app/Module/dasboard-resto/dasboard-resto.component.html
+++ b/src/app/Module/dasboard-resto/dasboard-resto.component.html
@@ -12,14 +12,14 @@
         </a>
       </li>
       <li>
-        <a href="#" routerLink="/gestionPlat">
+        <a href="#" routerLink="/gestionPlat" routerLinkActive="active" >
           <i class="bx bx-book-alt"></i>
           <span class="links_name">Gestion plat</span>
         </a>
       </li>
 
       <li>
-        <a href="#" routerLink="/commandeResto">
+        <a href="#" routerLink="/commandeResto" routerLinkActive="active" >
           <i class="bx bx-user"></i>
           <span class="links_name">Gestion commande</span>
         </a>
