--- a/src/app/Module/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/Module/dashboard-admin/dashboard-admin.component.html
@@ -17,19 +17,19 @@
         </a>
       </li>
       <li>
-        <a href="#" routerLink="/adminClient">
+        <a href="#" routerLinkActive="active"  routerLink="/adminClient">
           <i class="bx bx-list-ul"></i>
           <span class="links_name">Gestion client</span>
         </a>
       </li>
       <li>
-        <a href="#" routerLink="/adminRestaurant">
+        <a href="#" routerLinkActive="active"  routerLink="/adminRestaurant">
           <i class="bx bx-list-ul"></i>
           <span class="links_name">Gestion Restaurateur</span>
         </a>
       </li>
       <li>
-        <a href="#" routerLink="/adminMessage">
+        <a href="#" routerLinkActive="active"  routerLink="/adminMessage" >
           <i class="bx bx-list-ul"></i>
           <span class="links_name">Messages</span>
         </a>
