--- a/src/app/Restaurateur/ajouteplat/ajouteplat.component.css
+++ b/src/app/Restaurateur/ajouteplat/ajouteplat.component.css
@@ -6,3 +6,13 @@
     left: 240px;
     transition: all 0.5s ease;
   }
+
+  img.imagePLat{
+    width: 100% !important;
+    height: 300px !important;
+}
+.boutonajouter-blog{
+  background-color: #FFA07A;
+  color: white;
+  border: 2px solid #FFA07A ;
+}
