--- a/src/app/Administrateur/accueil-admin/accueil-admin.component.html
+++ b/src/app/Administrateur/accueil-admin/accueil-admin.component.html
@@ -8,7 +8,7 @@
           <div class="number">38,876</div>
           <div class="indicator">
             <i class="bx bx-up-arrow-alt"></i>
-            <span class="text">Up from yesterday</span>
+            <span class="text">Client</span>
           </div>
         </div>
         <i class="bx bxs-cart-add cart two"></i>
@@ -19,7 +19,7 @@
           <div class="number">$12,876</div>
           <div class="indicator">
             <i class="bx bx-up-arrow-alt"></i>
-            <span class="text">Up from yesterday</span>
+            <span class="text">Restaurant</span>
           </div>
         </div>
         <i class="bx bx-cart cart three"></i>
@@ -37,6 +37,25 @@
       </div>
     </div>
   </div>
+
+  <div class="group" [ngClass]="'flex flex-col justify-start items-start gap-2 w-96 h-56 duration-500 relative rounded-lg p-4 bg-purple-500'">
+    <div class="absolute duration-700 shadow-md group-hover:-translate-y-4 group-hover:-translate-x-4 -bottom-10 -right-10 w-1/2 h-1/2 rounded-lg bg-purple-400" alt="image here"></div>
+  
+    <div class="">
+      <h2 class="text-2xl font-bold mb-2 text-white">Elegant Card</h2>
+      <p class="text-gray-200 line-clamp-3">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean convallis
+        magna quis lectus fermentum, quis scelerisque orci pellentesque. Duis id
+        porta justo. Sed ac enim id justo tincidunt hendrerit id ac lectus.
+        Pellentesque maximus posuere tortor vitae consequat.
+      </p>
+    </div>
+    <button class="hover:bg-purple-400 bg-purple-600 text-white mt-6 rounded p-2 px-6">
+      Explore
+    </button>
+  </div>
+  
 </section>
+
 
 <router-outlet></router-outlet>
