--- a/src/app/Administrateur/restaurateur/restaurateur.component.css
+++ b/src/app/Administrateur/restaurateur/restaurateur.component.css
@@ -6,3 +6,9 @@
     left: 240px;
     transition: all 0.5s ease;
   }
+
+  .boutonajouter-blog{
+    background-color: #FFA07A;
+    color: white;
+    border: 2px solid #FFA07A ;
+  }
