--- a/src/app/Administrateur/restaurateur/restaurateur.component.html
+++ b/src/app/Administrateur/restaurateur/restaurateur.component.html
@@ -14,16 +14,16 @@
   </div>
 </div>
 <div class="d-flex justify-content-center">
-  <button class="btn fw-bold me-3 boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Liste des Restaurants</button>
+  <!-- <button class="btn fw-bold me-3 boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Liste des Restaurants</button>
   <button class="btn fw-bold me-3  boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Restaurant Active</button>
-  <button class="btn fw-bold me-3 boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Restaurant Desactiver</button>
+  <button class="btn fw-bold me-3 boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Restaurant Desactiver</button> -->
 </div>
 <div class="card w-75" style="margin-top: 8%; border: 2px solid red; margin-left: 15%; border: 1px solid #F7E801;">
   <div class="card-body">
     <table class="table">
       <thead>
         <tr>
-          <th scope="col" style="background-color: #FFA07A; font-weight: bold;">Photo</th>
+          <!-- <th scope="col" style="background-color: #FFA07A; font-weight: bold;">Photo</th> -->
           <th scope="col" style="background-color: #FFA07A; font-weight: bold;">Nom</th>
           <th scope="col" style="background-color: #FFA07A; font-weight: bold;">Lieu</th>
           <th scope="col" style="background-color: #FFA07A; font-weight: bold;">Téléphone</th>
@@ -32,7 +32,7 @@
       </thead>
       <tbody *ngFor="let restaurateur of restaurateurs">
         <tr>
-          <td><img src="http://127.0.0.1:8000/images/{{restaurateur.image}}" alt="" width="50" height="50"></td>
+          <!-- <td><img src="http://127.0.0.1:8000/images/{{restaurateur.image}}" alt="" width="50" height="50"></td> -->
           <td>{{ restaurateur.name }}</td>
           <td>{{ restaurateur.adresse }}</td>
           <td>{{ restaurateur.phone }}</td>
@@ -43,8 +43,8 @@
               <!-- Bouton pour supprimer le restaurant -->
               <li class="list-group-item">
                 <!-- <i [class]="restaurateur.isBlocked ? 'bi-unlock' : 'bi-trash3'"></i> -->
-                <i class="bi bi-person-fill-check"></i>
-                <i class="bi bi-person-fill-lock"></i>
+                <!-- <i class="bi bi-person-fill-check"></i>
+                <i class="bi bi-person-fill-lock"></i> -->
               </li>
             </ul>
           </td>
@@ -128,7 +128,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-danger" data-bs-dismiss="modal">Desactiver </button>
+        <!-- <button class="btn btn-danger" data-bs-dismiss="modal">Desactiver </button> -->
       </div>
     </div>
   </div>
