--- a/src/app/Module/footer/footer.component.html
+++ b/src/app/Module/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="py-3 my-4 border border-2 border-danger d-flex justify-content-center">
+<footer class=" my-4 border d-flex justify-content-center footerff">
     <div class="row">
         <p class="col"><img src="https://s3-alpha-sig.figma.com/img/39be/b32f/ac2c6e08b43e58bf83b95d2c4762e576?Expires=1707091200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=G6mg7sz2QY1B8RwelnpHJGiYzbnx~r9hG0Tml0hOucziA7vXreYYSRQZFxQ1cO8wLaoUuqCBXLb9tttvCw7Q5AaUPOtlyGh8JZUJQEiWF3IqMMwwrpsDxi4fJ69NjgmuI8y6wHwsloH3jSR7DSzKhf54Cc4VvWwL6AxdJ~yywxWqK8~uNTckyRBC7g9vC5SThVEk6wtndDvpfeANxTxO9AC1WUHSmsZLTcvS9YxktBoKmhn~ppgHKjv-8Qk3huWMobXrz1Lvz1-P-K-qgW1fw5Q99PiV4tJPPX6CxjMI43RcVoUpUkzmCvypncOMcPbC8~qXG0r96dMAc7KIbF4ujA__" alt=""></p>
         <div class="col+">
