--- a/src/app/Module/login/login.component.html
+++ b/src/app/Module/login/login.component.html
@@ -6,10 +6,12 @@
       <!-- debut connexion -->
       <form *ngIf="isSignIn" class="sign-in-form" (ngSubmit)="login()">
         <h2 class="title">Se connecter</h2>
+        <label for="">Entre votre Email</label>
         <div class="input-field">
           <i class="fas fa-user"></i>
           <input type="email" placeholder="Veuillez entrer votre mail" [(ngModel)]="email" name="email" required/>
         </div>
+        <label for="">Entre votre mot de passe</label>
         <div class="input-field">
           <i class="fas fa-lock"></i>
           <input type="password" placeholder="Veuillez entrer votre mot de passe" [(ngModel)]="password" name="password"/>
@@ -19,23 +21,28 @@
       <!-- fin connexion -->
       <!-- debut inscription -->
       <form *ngIf="!isSignIn" class="sign-up-form" (ngSubmit)="onRegister()">
-        <h2 class="title">S'inscrire</h2>
+        <!-- <h2 class="title">S'inscrire</h2> -->
+        <label for="">Votre Nom complet</label>
         <div class="input-field">
           <i class="fas fa-user"></i>
           <input type="text" placeholder="Nom" [(ngModel)]="username" name="username"/>
         </div>
+        <label for="">Votre Email</label>
         <div class="input-field">
           <i class="fas fa-envelope"></i>
           <input type="email" placeholder="Email" [(ngModel)]="registerEmail" name="registerEmail"/>
         </div>
+        <label for="">Votre Address</label>
         <div class="input-field">
           <i class="fas fa-user"></i>
           <input type="text" placeholder="Address" [(ngModel)]="adresse" name="adresse"/>
         </div>
+        <label for="">Votre Telephone</label>
         <div class="input-field">
           <i class="fas fa-user"></i>
           <input type="number" placeholder="Numero de telephone" [(ngModel)]="phone" name="phone"/>
         </div>
+        <label for="">Votre Mot de passe</label>
         <div class="input-field">
           <i class="fas fa-lock"></i>
           <input type="password" placeholder="Password" [(ngModel)]="registerPassword" name="registerPassword" />
