--- a/src/app/Restaurateur/ajouteplat/ajouteplat.component.html
+++ b/src/app/Restaurateur/ajouteplat/ajouteplat.component.html
@@ -6,21 +6,24 @@
       <h3 class="text-center mt-2 fw-bold titremere-blog">Listes des plats</h3>
       <div class="d-flex justify-content-between">
         <div>
-          <button class="btn fw-bold  boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutPlat">Ajouter un
-            plat</button>
+          <button class="btn fw-bold  boutonajouter-blog " data-bs-toggle="modal" data-bs-target="#ajoutPlat">Ajouter un
+            plat
+          </button>
+        </div>
+        <div class="d-flex justify-content-between">
           <div class="mb-3">
-            <label for="menu">Type de menu:</label>
+            <label for="menu"></label>
             <select id="menu" name="menu_id" [(ngModel)]="menu_id" (change)="onMenuChange()" required>
               <option value="" disabled selected>Choisissez un type de menu</option>
               <option *ngFor="let menuTitre of menus" [value]="menuTitre.id">{{ menuTitre.titre }}</option>
             </select>
           </div>
-
-        </div>
-        <div class="search">
-          <div class="input-group mb-3">
-            <input type="text" class="form-control inputPorteur" placeholder="Chercher un plat">
-            <button class="input-group-text iconsearch" id="basic-addon1"><i class="bi bi-search"></i></button>
+          
+          <div class="search">
+            <div class="input-group mb-3">
+              <input type="text" class="form-control inputPorteur" placeholder="Chercher un plat">
+              <button class="input-group-text iconsearch" id="basic-addon1"><i class="bi bi-search"></i></button>
+            </div>
           </div>
         </div>
       </div>
@@ -31,7 +34,7 @@
       <div class="row">
         <div class="col-12 col-md-4" *ngFor="let plat of plats">
           <div class="card border mb-2 rounded-4">
-            <img src="http://127.0.0.1:8000/images/{{plat.image}}" class="img-fluid" alt="Image article">
+            <img src="http://127.0.0.1:8000/images/{{plat.image}}" class="img-fluid imagePLat" alt="Image article">
             <div class="bodyArticle px-4">
               <h3 class="mt-3 text-center">{{ plat.libelle }}</h3>
               <p class="limited-height">{{ plat.descriptif }}</p>
@@ -108,7 +111,7 @@
                 class="bi bi-x-lg"></i></button>
           </div>
           <div class="modal-body">
-            <form class="ajoutArticle" (ngSubmit)="modifierPlat(newPlat ,newPlat)" enctype="multipart/form-data">
+            <form class="ajoutArticle" (ngSubmit)="modifierPlat(newPlat)" enctype="multipart/form-data">
               <div class="mb-3">
                 <label for="titreArticle">Nouvelle Nom:</label>
                 <input class="form-control" type="text" id="titreArticle" name="libelle" [(ngModel)]="libelle" required>
