--- a/src/app/Utilisateur/accueil/accueil.component.html
+++ b/src/app/Utilisateur/accueil/accueil.component.html
@@ -31,7 +31,7 @@
   <div class="circles typeResto">
     <div *ngFor="let categorie of categories">
       <div class="cerclemini" (change)="onRestoChange()">
-        <img src="https://cdn.pixabay.com/photo/2016/01/22/02/13/meat-1155132_640.jpg" alt="">
+        <img src="https://images.pexels.com/photos/1639557/pexels-photo-1639557.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
         <span>{{ categorie.type }}</span>
       </div>
     </div>
@@ -108,15 +108,15 @@
           <p class="card-text">{{ restaurant.description }}</p>
         </div>
         <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-          <button class="boutonCommandeDts rounded rounded-5 px-3" routerLink="/detailsrestaurant/id">
-            Commander
+          <button class="boutonCommandeDts rounded rounded-5 px-3" routerLink="/restaurant">
+            Consulter
           </button>
         </div>
       </div>
     </div>
   </div>
   <div class="d-flex justify-content-center">
-    <button class="boutonCommandeDts">voir plus</button>
+    <button class="boutonCommandeDts" routerLink="/restaurant">voir plus</button>
   </div>
 </div>
 
@@ -140,7 +140,7 @@
           rendre une cuisine de qualité accessible à tous, en offrant des plats
           délicieux et équilibrés avec un service rapide et efficace.
         </p>
-        <button class="boutonVoirDts rounded-4">voir plus</button>
+        <button class="boutonVoirDts rounded-4" routerLink="/propos" >voir plus</button>
       </div>
       <div></div>
     </div>
@@ -164,7 +164,7 @@
           </p>
         </div>
         <div class="d-flex justify-content-center">
-          <button class="boutonCommandeDts">Passer une commande</button>
+          <button class="boutonCommandeDts" routerLink="/restaurant">Passer une commande</button>
         </div>
       </div>
       <div class="col-md-8">
@@ -189,7 +189,7 @@
           </p>
         </div>
         <div class="d-flex justify-content-center">
-          <button class="boutonCommandeDts">Passer une commande</button>
+          <button class="boutonCommandeDts" routerLink="/restaurant">Passer une commande</button>
         </div>
       </div>
     </div>
@@ -208,7 +208,7 @@
           </p>
         </div>
         <div class="d-flex justify-content-center">
-          <button class="boutonCommandeDts">Passer une commande</button>
+          <button class="boutonCommandeDts" routerLink="/restaurant">Passer une commande</button>
         </div>
       </div>
       <div class="col-md-8">
