--- a/src/app/Restaurateur/ajouteplat/ajouteplat.component.html
+++ b/src/app/Restaurateur/ajouteplat/ajouteplat.component.html
@@ -65,7 +65,7 @@
                 class="bi bi-x-lg"></i></button>
           </div>
           <div class="modal-body">
-            <form class="ajoutArticle" (ngSubmit)="addPlat()" enctype="multipart/form-data">
+            <!-- <form class="ajoutArticle" (ngSubmit)="addPlat()" enctype="multipart/form-data">
               <div class="mb-3">
                 <label for="titreArticle">Titre du plat:</label>
                 <input class="form-control" type="text" id="titreArticle" name="libelle" [(ngModel)]="libelle">
@@ -94,7 +94,36 @@
                 </select>
               </div>
               <button class="btn btn-add" type="submit">Ajouter</button>
+            </form> -->
+
+            <!-- meal-form.component.html -->
+            <form [formGroup]="ajoutArticle" (ngSubmit)="addPlat()">
+  <label for="label">Libellé:</label>
+  <input type="text" id="label" formControlName="libelle" />
+
+  <label for="description">Description:</label>
+  <textarea id="description" formControlName="descriptif"></textarea>
+
+  <label for="image">Image:</label>
+  <input type="file" id="image" (change)="getFile($event)" formControlName="image" />
+
+
+  <label for="price">Prix:</label>
+  <input type="number" id="price" formControlName="prix" />
+
+  <div class="mb-3">
+    <label for="menu">Type de menu:</label>
+    <select id="menu" formControlName="menu_id">
+      <option *ngFor="let menuTitre of menus" [value]="menuTitre.id">{{ menuTitre.titre }}</option>
+    </select>
+  </div>
+
+  <button type="submit" [disabled]="ajoutArticle.invalid">Ajouter Plat</button>
             </form>
+
+
+
+
           </div>
         </div>
       </div>
